metadata/force-app/main/default/objects/Professional_Entity__c/Professional_Entity__c.object-meta.xml
<CustomObject>
    <label>Professional Entity</label>
    <nameField>
        <label>Professional Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>