metadata/force-app/main/default/objects/Professional_Entity__c/fields/Entity_City__c.field-meta.xml
<CustomField>
    <fullName>Entity_City__c</fullName>
    <label>Entity City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>