metadata/force-app/main/default/objects/Professional_Entity__c/fields/Entity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entity_Notes__c</fullName>
    <label>Entity Notes</label>
    <length>29999</length>
    <type>LongTextArea</type>
</CustomField>