metadata/force-app/main/default/objects/Professional_Entity__c/fields/Entity_Website__c.field-meta.xml
<CustomField>
    <fullName>Entity_Website__c</fullName>
    <label>Entity Website</label>
    <type>Url</type>
</CustomField>