metadata/force-app/main/default/objects/Professional_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity_City__c</columns>
    <columns>Entity_Website__c</columns>
    <columns>Entity_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>